--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -50,6 +50,7 @@ header { }
 footer { }
 
 /* -------------------- :: Forms -------------------- */
+/*
 form { margin:1em 0; }
 
 fieldset { border: 0; }
@@ -62,7 +63,7 @@ input[type=checkbox]{margin:5px 0;width:20px;height:20px;}
 input[type=radio]{margin:5px 0;width:20px;height:20px;}
 select#lstPostCategory{border:0 !important;background:none;font-size:1em;color:#FF6600;}
 textarea{width:100%;height:250px;border:5px solid white;-webkit-box-shadow:inset 0 0 8px  rgba(0,0,0,0.1),0 0 16px rgba(0,0,0,0.1);-moz-box-shadow:inset 0 0 8px  rgba(0,0,0,0.1),0 0 16px rgba(0,0,0,0.1);box-shadow:inset 0 0 8px  rgba(0,0,0,0.1),0 0 16px rgba(0,0,0,0.1);padding:10px;background: rgba(255,255,255,0.5);margin: 5px 0 10px 0px;}
-
+*/
 
 
 /* -------------------- :: Devices -------------------- */
