--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,11 +1,10 @@
 * { padding: 0; margin: 0; }
-body { background: ; }
-body { font-family: "Helvetica Neue", "HelveticaNeue", Helvetica, Tahoma, "Lucida Grande", Arial, sans-serif; font-size: 100%; font-size: 1em; -webkit-font-smoothing: antialiased; }
+body { font-family: "Helvetica Neue", "HelveticaNeue", Helvetica, Tahoma, "Lucida Grande", Arial, sans-serif; font-size: 100%; font-size: 1em; }
 
 /* -------------------- :: Typography -------------------- */
 
-h1, h2, h3, h4, h5 { margin-top: 5px; color: ; }
-h1 { font-size: 3em; font-weight: bold; margin: ; }
+h1, h2, h3, h4, h5 { margin-top: 5px; }
+h1 { font-size: 3em; font-weight: bold; }
 h2 { font-size: 2em; font-weight: bold; margin-bottom: 0;}
 h3 { font-size: 1.75em; font-weight: bold; margin-bottom: 0; }
 h4 { font-size: 1.50em; font-weight: bold; margin-bottom: 0; }
