--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,5 +1,5 @@
 * { padding: 0; margin: 0; }
-body { font-family: "Helvetica Neue", "HelveticaNeue", Helvetica, Tahoma, "Lucida Grande", Arial, sans-serif; font-size: 100%; font-size: 1em; }
+body { font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; font-weight: 300; }
 
 /* -------------------- :: Typography -------------------- */
 
@@ -10,6 +10,11 @@ h3 { font-size: 1.75em; font-weight: bold; margin-bottom: 0; }
 h4 { font-size: 1.50em; font-weight: bold; margin-bottom: 0; }
 h5 { font-size: 1.25em; margin-bottom: 0; }
 
+em { font-weight: 600; font-style: normal; }
+
+.no-list-style li { list-style: none; float: left; }
+.service-list { margin-left: 3em; }
+
 /* -------------------- :: Links -------------------- */
 a {}
 
@@ -17,10 +22,13 @@ a {}
 /* -------------------- :: Images -------------------- */
 img.flex { max-width: 100%; }
 a img { border: 0; }
+img.logo { padding: 5px; }
+.banner { text-align: center; padding: 0 0 20px 0; }
+img.lfloat { float: left; margin-right: 10px; }
 
 /* -------------------- :: Rows & Columns -------------------- */
-.row { width:100%;min-height:1px;clear:both;display:block;}
-.row .twelve { width: 98.0%; }
+.row { width: 100%; min-width: 400px; min-height: 1px; clear: both; display: block; }
+.row .twelve { width: 100.0%; }
 .row .eleven { width: 89.6% }
 .row .ten { width: 81.3% }
 .row .nine { width: 72.9% }
@@ -33,37 +41,42 @@ a img { border: 0; }
 .row .two { width:14.7% }
 .row .one { width: 6.3% }
 
-.col {max-width:100%;min-height:1px;margin:0 1.5% 0 0;display:inline;float:left;}
-.clearfix:before, .clearfix:after, .row:before, .row:after {content:'\0020';display:block;overflow:hidden;visibility:hidden;width:0;height:0;}
+.col { max-width: 100%; min-height: 1px; margin: 0 1.5% 0 0; display: inline; float: left; }
+.clearfix:before, .clearfix:after, .row:before, .row:after { content:'\0020'; display: block; overflow: hidden; visibility: hidden; width: 0; height: 0; }
+.container { padding-left: 1%; }
+.services-box { border: 0 solid black; overflow: hidden; }
 
 /* -------------------- :: Top Bar / Navigation -------------------- */
-nav { }
-nav li { }
-nav li a { }
-nav li a:hover { }
+nav { margin: 0 auto; height: 60px; width: 100%; overflow: auto; background: #222; }
+nav li { margin-top: 20px; list-style: none; float: left;}
+nav li a { color: #fff; text-decoration: none; padding: 20px; }
+nav li a:hover { background: radial-gradient(circle, rgba(31,169,244,1), rgba(0,28,78,1)); }
+
+.branding { background: #111 url(); }
+.companycontact { margin-bottom: 10px; font-size: 80%; box-shadow: 0 -3px 6px #000; background: #eee; }
+.companycontact li { list-style: none; float: left; padding-right: 20px; }
 
 /* -------------------- :: Header -------------------- */
 header { }
 
 /* -------------------- :: Footer -------------------- */
-footer { }
+footer { margin-top: 10px !important; padding: 10px; height: 30px; color: #eee; background: linear-gradient(#222,#000); }
 
 /* -------------------- :: Forms -------------------- */
-/*
-form { margin:1em 0; }
 
+form { margin: 1em 0; }
+
+legend { font-size: 2em; font-weight: bold; }
+fieldset legend { font-size: 1.1em; font-weight: bold; }
 fieldset { border: 0; }
 fieldset label { margin-right: 10px; }
 
-input:not([type=submit]):not([type=checkbox]):not([type=radio]) {border:5px solid white;-webkit-box-shadow:inset 0 0 8px  rgba(0,0,0,0.1),0 0 16px rgba(0,0,0,0.1); -moz-box-shadow:inset 0 0 8px  rgba(0,0,0,0.1),0 0 16px rgba(0,0,0,0.1);box-shadow:inset 0 0 8px  rgba(0,0,0,0.1),0 0 16px rgba(0,0,0,0.1);padding:10px;background: rgba(255,255,255,0.5);margin: 5px 0 10px 0px;}
-input[type=submit]{border:5px solid white !important;box-shadow:inset 0 0 8px  rgba(0,0,0,0.1),0 0 16px rgba(0,0,0,0.1) !important;padding:10px !important;background:rgba(255,255,255,0.5) !important;}
-input[type=submit]:hover{background:rgba(145,5,55,0.5) !important;}
-input[type=checkbox]{margin:5px 0;width:20px;height:20px;}
-input[type=radio]{margin:5px 0;width:20px;height:20px;}
-select#lstPostCategory{border:0 !important;background:none;font-size:1em;color:#FF6600;}
-textarea{width:100%;height:250px;border:5px solid white;-webkit-box-shadow:inset 0 0 8px  rgba(0,0,0,0.1),0 0 16px rgba(0,0,0,0.1);-moz-box-shadow:inset 0 0 8px  rgba(0,0,0,0.1),0 0 16px rgba(0,0,0,0.1);box-shadow:inset 0 0 8px  rgba(0,0,0,0.1),0 0 16px rgba(0,0,0,0.1);padding:10px;background: rgba(255,255,255,0.5);margin: 5px 0 10px 0px;}
-*/
+input, select { vertical-align: top; margin: 2px 0; }
+input:not([type=submit]) { border: 1px solid #bbb; background: #fff; }
 
+input[type=submit], input[type=reset] { border: 3px solid #DEDEDE !important; box-shadow: inset 0 0 3px #DEDEDE,0 0 16px #DEDEDE !important; padding: 10px !important; background: rgba(255,255,255,0.5) !important; }
+input[type=submit]:hover, input[type=reset]:hover { background: #0c9eed !important; }
+textarea { vertical-align: top; width: 375px; height: 80px; border: 3px solid #DEDEDE; box-shadow: inset 0 0 8px #999, 0 0 0 #000; padding: 10px; background: rgba(255,255,255,0.5); margin: 5px 0 10px 0px; }
 
 /* -------------------- :: Devices -------------------- */
 
